fix warning box button overflow issue

--- a/src/components/RangeActionModal/WarningBox/WarningBox.module.css
+++ b/src/components/RangeActionModal/WarningBox/WarningBox.module.css
@@ -56,8 +56,20 @@
     outline: none;
     border: none;
     border-radius: var(--border-radius);
-    width: 210px;
     padding: 6px 8px;
+    border: 1px solid transparent;
+    white-space: nowrap;
+
+    
+    
+}
+
+.warning_box button:hover, .text_only button:hover{
+    background-color: transparent;
+    border: 1px solid var(--other-red);
+    transition: all var(--animation-speed) ease-in-out;
+    color: var(--text1);
+
 }
 
 .warning_box svg,
